[package]
name = "whirlpool-client"
version = "1.0.0"
authors = ["Straylight <straylight_orbit@protonmail.com>"]
description = "Whirlpool Coinjoin Client"
license = "GPL-3.0-only"
keywords = ["coinjoin", "whirlpool", "bitcoin"]
edition = "2021"

[features]
default = ["client"]
client = ["port_check", "rand", "socks", "tungstenite", "ureq"]

[dependencies]
bitcoin = { version = "0.29", features = ["default", "base64", "rand", "serde"] }
blind-rsa-signatures = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

port_check = { version = "0.1.5", optional = true }
rand = { version = "0.8", optional = true }
socks = { version = "0.3", optional = true }
tungstenite = {version = "0.17", features = ["rustls-tls-native-roots"], optional = true }
ureq = { version = "2.4", features = ["socks-proxy"] , optional = true }
