[package]
name = "whirlpool-client"
version = "2.0.1"
authors = ["Straylight <straylight_orbit@protonmail.com>"]
description = "Whirlpool Coinjoin Client"
license = "GPL-3.0-only"
keywords = ["coinjoin", "whirlpool", "bitcoin"]
edition = "2021"

[features]
default = ["rustls-webpki"]
rustls-webpki = ["tungstenite/rustls-tls-webpki-roots"]
rustls-native-certs = ["tungstenite/rustls-tls-native-roots", "ureq/native-certs"]

[dependencies]
bitcoin = { version = "0.30.0", features = ["base64", "rand", "serde"] }
blind-rsa-signatures = "0.15.0"
hex = "0.4.3"
log = "0.4.17"
port_check = "0.1.5"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
socks = "0.3.4"
tungstenite = "0.19.0"
ureq = { version = "2.6.2", features = ["socks-proxy"] }
